--- a/Insta/pom.xml
+++ b/Insta/pom.xml
@@ -89,6 +89,13 @@
 		    <artifactId>aspectjweaver</artifactId>
 		    <version>1.8.9</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+		<dependency>
+  			<groupId>com.fasterxml.jackson.core</groupId>
+   			<artifactId>jackson-databind</artifactId>
+   			<version>2.7.0</version>
+		</dependency>
 
 
 	</dependencies>
